# fakestore_client

./: .gitignore  DOCUMENTATION.md  Procfile  README.md  pyproject.toml  render.yaml
app/: server.py
app/templates/: index.html
fakestore_client/: __init__.py  auth.py  base.py  client.py  customers.py  models.py  orders.py  products.py
tests/: conftest.py  test_customers.py  test_models.py  test_orders.py  test_products_auth.py
