[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakestore-client"
version = "1.0.0"
description = "Python API client library for Fake Store API — customers, orders, auth, and more."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["fakestoreapi", "api-client", "e-commerce", "testing", "mock"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "flask>=3.0",
    "flask-cors>=5.0",
    "faker>=30.0",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]